{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Camera",
            "id": "7e56fe2d-8b2a-4d49-bb90-806b966d702a",
            "actions": [
                {
                    "name": "CameraFly",
                    "type": "Value",
                    "id": "1ba56c81-ce33-404d-9ded-6d271c1421e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraScroll",
                    "type": "Value",
                    "id": "f2c0544a-7dd8-4799-8fa3-da90b82a1705",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3bcf87f9-a8e7-4086-86be-41ce3c9267a4",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "5bf92f7e-6222-407e-97cf-78a8f615e48a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraFly",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "acfc4e09-5779-44e4-8c4c-608a0c6c7dd0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraFly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e1de7ec0-1f65-4bdf-90ad-327d9e6ca471",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraFly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "65824366-7237-4b63-904f-58b5413eb1cf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraFly",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9479d4cf-5ece-45ff-90f0-a31953c33ab8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraFly",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}